comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <main>
         <head>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos gratis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptates nulla dolor totam, nisi recusandae, dicta amet velit aspernatur quisquam est officiis dolorum ut beatae! Nam animi ea nemo facere?</p>
         </article>
     </main>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet nulla omnis, cupiditate, placeat praesentium sapiente molestias error corrupti officia provident dicta perspiciatis ipsum dolorem. Iusto officia minima iure autem.</p>
     </article>
 </body>
 </html>
